* Fixed NullPointerException when saving a map with no extension
* Fixed the zooming so that it keeps the center in place
* Fixed exiting even when a request to save the changes failed
* Fixed layer merging so that undo/redo of operation is functional
* Fixed resetting of selected tileset in tile palette on layer changes
* Fixed saving of tile properties when using a tileset image
* Rewrote configuration based on the Preferences class, no more tiled.conf
* Cleaned up TileSet (removed checksumming and rotation/orienation code)
* Removed experimental hexagonal mapview from new map dialog
* Removed option to not automatically create tiles from a tileset image
* Changed map format to store properties within a single "properties" element

0.5.1 - June 15th, 2005

* Added a checkerboard background to tileset palette
* Added support for layer locking (not editable when locked)
* Added support for tmx.gz map files
* Added selection addition and substraction via Shift and Ctrl respectively
* Improved the drawing speed thanks to some thorough testing and suggestions
  (Jerome Blouin)
* Improved transformation so that it respects selections
* Fixed the "Save As Image" feature to use current zoom level
* Fixed drawing on invisible layers
* Fixed selection rectangle to include one more tile
* Fixed loading of plugins that only do export and no import
* Fixed removing tilesets in the Tileset Manager
* Fixed image loading to ensure hardware acceleration is used in Java 1.4 and
  above (Jerome Blouin)
* Fixed a NullPointerException when loading TSX files as imported tilesets
* Fixed an "Unsupported protocol" error when loading TMX files which referenced
  an external tileset under certain conditions
* Fixed a ClassCastException when loading GIFs as tilesets

0.5.0 - December 14th, 2004

* Added width and height attributes to layer element
* Added layer properties, analoguous to tile and map properties
* Added a version attribute to the map tag