@@ -40,6 +40,7 @@ UNDONE
 * Fixed layer merging so that undo/redo of operation is functional
 * Fixed resetting of selected tileset in tile palette on layer changes
 * Fixed saving of tile properties when using a tileset image
+* Fixed loading of invisible layers
 * Rewrote configuration based on the Preferences class, no more tiled.conf
 * Cleaned up TileSet (removed checksumming and rotation/orienation code)
 * Removed experimental hexagonal mapview from new map dialog
